# DataDesigner

./: .gitignore  CONTRIBUTING.md  MARKETING_IDEAS.md  Makefile  README.md  SUMMARY.md  VERSIONING.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  development-task.yml  feature-request.yml
.github/workflows/: build-docs.yml  check-colab-notebooks.yml  ci.yml  dco-assistant.yml
docs/: marketing-analytics-guide.md  quick-start.md
docs/code_reference/: validator_params.md
docs/colab_notebooks/: 1-the-basics.ipynb  2-structured-outputs-and-jinja-expressions.ipynb  3-seeding-with-a-dataset.ipynb  4-providing-images-as-context.ipynb
docs/concepts/: person_sampling.md  validators.md
docs/models/: configure-model-settings-with-the-cli.md  default-model-settings.md  model-configs.md  model-providers.md
docs/notebook_source/: 4-providing-images-as-context.py
docs/notebooks/: 1-the-basics.ipynb  2-structured-outputs-and-jinja-expressions.ipynb  3-seeding-with-a-dataset.ipynb  4-marketing-analytics-demo.ipynb  README.md  intro.md
docs/overrides/: main.html
docs/plugins/: example.md
docs/scripts/: generate_colab_notebooks.py
scripts/: update_license_headers.py
src/data_designer/: __init__.py  lazy_heavy_imports.py  plugin_manager.py
src/data_designer/cli/commands/: list.py  models.py  providers.py  reset.py
src/data_designer/config/: base.py  column_configs.py  config_builder.py  data_designer_config.py  datastore.py  default_model_settings.py  models.py  preview_results.py  processors.py  run_config.py  sampler_params.py  seed_source.py  validator_params.py
src/data_designer/config/utils/: constants.py  validation.py  visualization.py
src/data_designer/engine/: compiler.py
src/data_designer/engine/analysis/: column_statistics.py  dataset_profiler.py
src/data_designer/engine/column_generators/: registry.py
src/data_designer/engine/dataset_builders/: artifact_storage.py  column_wise_builder.py
src/data_designer/engine/models/: litellm_overrides.py  registry.py  telemetry.py
src/data_designer/engine/resources/: managed_dataset_generator.py  managed_dataset_repository.py  managed_storage.py  seed_dataset_data_store.py
src/data_designer/engine/sampling_gen/: errors.py  people_gen.py
src/data_designer/essentials/: __init__.py
src/data_designer/interface/: data_designer.py
src/data_designer/plugins/: plugin.py
tests/: test_import_perf.py  test_plugin_manager.py
tests/cli/commands/: test_models_command.py  test_providers_command.py  test_reset_command.py
tests/config/: test_columns.py  test_config_builder.py  test_datastore.py  test_default_model_settings.py  test_models.py  test_sampler_params.py
tests/config/utils/: test_type_helpers.py  test_visualization.py
tests/engine/: conftest.py  test_compiler.py
tests/engine/analysis/: conftest.py
tests/engine/dataset_builders/: test_artifact_storage.py  test_column_wise_builder.py
tests/engine/models/: test_litellm_overrides.py  test_model_registry.py
tests/engine/resources/: conftest.py  test_managed_dataset_generator.py  test_managed_dataset_repository.py  test_managed_storage.py
tests/engine/sampling_gen/: conftest.py  test_column.py  test_generator.py
tests/interface/: test_data_designer.py
tests/plugins/: test_plugin.py  test_plugin_registry.py
(+25 files in other folders)
